--- a/demo.html
+++ b/demo.html
@@ -1,145 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Swiper Team Cards</title>
-
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-    <!-- Bootstrap CSS (optional for card styling) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        .team-card {
-            background-color: #f8f9fa;
-            transition: transform 0.3s ease;
-        }
-
-        .team-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .member-name {
-            font-weight: bold;
-        }
-
-        .swiper {
-            padding-bottom: 40px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Show More Example</title>
+  <style>
+    #text {
+      font-family: Arial, sans-serif;
+      line-height: 1.5;
+    }
+    button {
+      margin-top: 10px;
+      padding: 6px 12px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+  </style>
 </head>
-
 <body>
 
-    <div class="container my-5">
-        <h2 class="text-center mb-4">Meet Our Team</h2>
+<!-- 🔹 Your full text goes here inside this hidden element -->
+<p id="fullText" style="display: none;">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna 
+  ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam 
+  mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, 
+  quis sollicitudin sapien justo in libero. Fusce dapibus, tellus ac cursus commodo, tortor 
+  mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor.
+</p>
 
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
+<!-- 🔹 This is where the visible truncated text will appear -->
+<p id="text"></p>
+<button id="toggleBtn">Show More</button>
 
-                <!-- Slide 1 -->
-                <div class="swiper-slide">
-                    <div class="card team-card p-2 border-0 h-100 rounded-4">
-                        <div class="card-body">
-                            <img src="./Assets/profile/pro1.png" class="img-fluid w-100" alt="">
-                            <h5 class="member-name mt-3 mb-0">Rajesh Kumar</h5>
-                            <p class="member-title">Founder & CEO</p>
-                            <p class="member-bio mb-0">Chartered Accountant with 20+ years of experience in corporate
-                                compliance and taxation.</p>
-                        </div>
-                    </div>
-                </div>
+<script>
+  const fullTextElement = document.getElementById('fullText');
+  const textElement = document.getElementById('text');
+  const toggleBtn = document.getElementById('toggleBtn');
 
-                <!-- Slide 2 -->
-                <div class="swiper-slide">
-                    <div class="card team-card p-2 border-0 h-100 rounded-4">
-                        <div class="card-body">
-                            <img src="./Assets/profile/pro2.png" class="img-fluid w-100" alt="">
-                            <h5 class="member-name mt-3 mb-0">Priya Mehra</h5>
-                            <p class="member-title">COO</p>
-                            <p class="member-bio mb-0">Operations expert with a knack for streamlining business
-                                workflows and scaling startups.</p>
-                        </div>
-                    </div>
-                </div>
+  const fullText = fullTextElement.innerText;
+  const wordLimit = 40;
+  const words = fullText.split(' ');
+  const shortText = words.slice(0, wordLimit).join(' ') + '...';
 
-                <!-- Slide 3 -->
-                <div class="swiper-slide">
-                    <div class="card team-card p-2 border-0 h-100 rounded-4">
-                        <div class="card-body">
-                            <img src="./Assets/profile/pro3.png" class="img-fluid w-100" alt="">
-                            <h5 class="member-name mt-3 mb-0">Amit Sharma</h5>
-                            <p class="member-title">Head of Marketing</p>
-                            <p class="member-bio mb-0">Creative strategist focused on digital campaigns and brand
-                                awareness across multiple platforms.</p>
-                        </div>
-                    </div>
-                </div>
+  let isExpanded = false;
+  textElement.innerText = shortText;
 
-                <!-- Slide 4 -->
-                <div class="swiper-slide">
-                    <div class="card team-card p-2 border-0 h-100 rounded-4">
-                        <div class="card-body">
-                            <img src="./Assets/profile/pro4.png" class="img-fluid w-100" alt="">
-                            <h5 class="member-name mt-3 mb-0">Neha Kapoor</h5>
-                            <p class="member-title">CTO</p>
-                            <p class="member-bio mb-0">Technology lead with a deep understanding of scalable web
-                                platforms and app development.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="card team-card p-2 border-0 h-100 rounded-4">
-                        <div class="card-body">
-                            <img src="./Assets/profile/pro4.png" class="img-fluid w-100" alt="">
-                            <h5 class="member-name mt-3 mb-0">Neha Kapoor</h5>
-                            <p class="member-title">CTO</p>
-                            <p class="member-bio mb-0">Technology lead with a deep understanding of scalable web
-                                platforms and app development.</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <script>
-        const swiper = new Swiper('.mySwiper', {
-            loop: true,
-            spaceBetween: 20,
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                768: {
-                    slidesPerView: 2,
-                },
-                992: {
-                    slidesPerView: 3,
-                },
-                1200: {
-                    slidesPerView: 4,
-                }
-            }
-        });
-    </script>
+  toggleBtn.addEventListener('click', function () {
+    if (isExpanded) {
+      textElement.innerText = shortText;
+      toggleBtn.innerText = 'Show More';
+    } else {
+      textElement.innerText = fullText;
+      toggleBtn.innerText = 'Show Less';
+    }
+    isExpanded = !isExpanded;
+  });
+</script>
 
 </body>
-
 </html>
