--- a/about.html
+++ b/about.html
@@ -764,19 +764,20 @@
                         Partnerships
                     </p>
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-3">
-                            <img src="./Assets/cert/iso.png" class="w-75 h-100" />
+                        <div class="col-lg-3 col-md-3 col-6 text-center mb-3">
+                            <img src="./Assets/cert/iso.png" class="img-fluid" alt="ISO" />
                         </div>
-                        <div class="col-lg-3 col-md-3 col-3">
-                            <img src="./Assets/cert/mca.png" class="w-75 h-100" />
+                        <div class="col-lg-3 col-md-3 col-6 text-center mb-3">
+                            <img src="./Assets/cert/mca.png" class="img-fluid" alt="MCA" />
                         </div>
-                        <div class="col-lg-3 col-md-3 col-3">
-                            <img src="./Assets/cert/mese.png" class="w-75 h-100" />
+                        <div class="col-lg-3 col-md-3 col-6 text-center mb-3">
+                            <img src="./Assets/cert/mese.png" class="img-fluid" alt="MESE" />
                         </div>
-                        <div class="col-lg-3 col-md-3 col-3">
-                            <img src="./Assets/cert/gst.png" class="w-75 h-100" />
+                        <div class="col-lg-3 col-md-3 col-6 text-center mb-3">
+                            <img src="./Assets/cert/gst.png" class="img-fluid" alt="GST" />
                         </div>
                     </div>
+                      
                 </div>
                 <div class="col-md-6">
                     <div class="row">
